[package]
name = "iot-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "perf_test"
path = "src/bin/perf_test.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
psutil = "3.2"

[dev-dependencies]
tokio-test = "0.4" 